clusters/default/dashy/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashy
  namespace: dashy
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dashy.__BASE-DOMAIN__`)
      kind: Rule
      services:
        - name: dashy
          port: 80
